Mudança do Dataset e inicio das análises

--- a/Acidentes.ipynb
+++ b/Acidentes.ipynb
@@ -1,15 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Análise de Acidentes nas Rodovias Federais entre os anos de 2007 à 2020"
+    "Análise de Acidentes nas Rodovias Federais no ano de 2022"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,69 +34,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Caio Cezar\\AppData\\Local\\Temp\\ipykernel_19668\\2523134434.py:1: DtypeWarning: Columns (6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv(\"Dataset/acidentes2007-2020.csv\",usecols=[3,4,5,6,8,10,12,14,15])\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "dia_semana                object\n",
-       "horario                   object\n",
-       "uf                        object\n",
-       "br                        object\n",
-       "municipio                 object\n",
-       "tipo_acidente             object\n",
-       "fase_dia                  object\n",
-       "condicao_metereologica    object\n",
-       "tipo_pista                object\n",
+       "data_inversa               object\n",
+       "dia_semana                 object\n",
+       "uf                         object\n",
+       "br                        float64\n",
+       "tipo_acidente              object\n",
+       "fase_dia                   object\n",
+       "condicao_metereologica     object\n",
+       "pessoas                     int64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"Dataset/acidentes2007-2020.csv\",usecols=[3,4,5,6,8,10,12,14,15])\n",
+    "#Importando arquivo\n",
+    "\n",
+    "data = pd.read_csv(\"Dataset/datatran2022.csv\", low_memory=False, encoding=\"ISO-8859-1\", on_bad_lines='skip', usecols = [1,2,4,5,9,11,13,17])\n",
+    "#Obs: Tive problemas na importação do arquivo original, dessa forma foi necessário adicionar os argumentos acima no read_csv\n",
+    "\n",
     "data.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  dia_semana   horario  uf   br        municipio            tipo_acidente  \\\n",
-      "0    segunda  15:30:00  MG  381         OLIVEIRA          Colisão Frontal   \n",
-      "1    segunda  14:25:00  MG   40        ITABIRITO           Saída de Pista   \n",
-      "2    segunda  02:10:00  MA  135         SAO LUIS  Atropelamento de Animal   \n",
-      "3      terça  05:30:00  CE  222          CAUCAIA              Capotamento   \n",
-      "4    domingo  17:40:00  MA  230  BARAO DE GRAJAU              Capotamento   \n",
-      "\n",
-      "      fase_dia condicao_metereologica tipo_pista  \n",
-      "0    Pleno dia              Céu Claro      Dupla  \n",
-      "1    Pleno dia              Céu Claro    Simples  \n",
-      "2  Plena noite              Céu Claro    Simples  \n",
-      "3    Amanhecer              Céu Claro      Dupla  \n",
-      "4    Anoitecer                  Chuva    Simples  \n"
+     "ename": "TypeError",
+     "evalue": "'tuple' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\Projetos\\Acidentes_Rodovias_Federais\\Acidentes.ipynb Cell 5\u001b[0m in \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Projetos/Acidentes_Rodovias_Federais/Acidentes.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39;49m(data\u001b[39m.\u001b[39;49mhead())\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object is not callable"
      ]
     }
    ],
    "source": [
     "print(data.head(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Análise das pessoas envolvidas em cada acidente\n",
+    "ps = np.array(data[\"pessoas\"])\n",
+    "print(\"Média de Pessoas: \", ps.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Frêquencia de Distribuição - Fase do Dia\n",
+    "fd = pd.DataFrame(data)\n",
+    "fd.plot(kind='bar', x='dia_semana')\n",
+    "plt.show()"
    ]
   }
  ],
